Update to phase 2 fixed disabled buttons added guess count tracker added mouse hover to hand on buttons fixed game over title so it is not too big

--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ h2 {
   line-height: 250px;
 }
 
+.game-over {
+  font-size: 150px;
+  font-weight: 300;
+}
+
 .smaller-font {
   font-size: 150px;
   line-height: 250px;
